Remove modified_by and cascade user deletion (#5033)
