# app-backend/datamodel/src/main/scala/Team.scala
@@ -8,15 +8,16 @@ import io.circe.generic.JsonCodec
 import io.circe.syntax._
 
 @JsonCodec
-final case class Team(id: UUID,
-                      createdAt: java.sql.Timestamp,
-                      createdBy: String,
-                      modifiedAt: java.sql.Timestamp,
-                      modifiedBy: String,
-                      organizationId: UUID,
-                      name: String,
-                      settings: Json,
-                      isActive: Boolean)
+final case class Team(
+    id: UUID,
+    createdAt: java.sql.Timestamp,
+    createdBy: String,
+    modifiedAt: java.sql.Timestamp,
+    organizationId: UUID,
+    name: String,
+    settings: Json,
+    isActive: Boolean
+)
 
 object Team {
   def tupled = (Team.apply _).tupled
@@ -24,9 +25,11 @@ object Team {
   def create = Create.apply _
 
   @JsonCodec
-  final case class Create(organizationId: UUID,
-                          name: String,
-                          settings: Json = "{}".asJson) {
+  final case class Create(
+      organizationId: UUID,
+      name: String,
+      settings: Json = "{}".asJson
+  ) {
     def toTeam(user: User): Team = {
       val id = java.util.UUID.randomUUID()
       val now = new Timestamp(new java.util.Date().getTime)
@@ -36,7 +39,6 @@ object Team {
         now, // createdAt
         user.id, // createdBy
         now, // modifiedAt
-        user.id, // modifiedBy
         this.organizationId,
         this.name,
         this.settings,
