# app-backend/datamodel/src/main/scala/ToolRun.scala
@@ -8,32 +8,34 @@ import io.circe._
 import io.circe.generic.JsonCodec
 
 @JsonCodec
-final case class ToolRun(id: UUID,
-                         name: Option[String],
-                         createdAt: Timestamp,
-                         createdBy: String,
-                         modifiedAt: Timestamp,
-                         modifiedBy: String,
-                         owner: String,
-                         visibility: Visibility,
-                         projectId: Option[UUID],
-                         projectLayerId: Option[UUID],
-                         templateId: Option[UUID],
-                         executionParameters: Json)
+final case class ToolRun(
+    id: UUID,
+    name: Option[String],
+    createdAt: Timestamp,
+    createdBy: String,
+    modifiedAt: Timestamp,
+    owner: String,
+    visibility: Visibility,
+    projectId: Option[UUID],
+    projectLayerId: Option[UUID],
+    templateId: Option[UUID],
+    executionParameters: Json
+)
 
 object ToolRun {
   def create = Create.apply _
   def tupled = (ToolRun.apply _).tupled
 
   @JsonCodec
-  final case class Create(name: Option[String],
-                          visibility: Visibility,
-                          projectId: Option[UUID],
-                          projectLayerId: Option[UUID],
-                          templateId: Option[UUID],
-                          executionParameters: Json,
-                          owner: Option[String])
-      extends OwnerCheck {
+  final case class Create(
+      name: Option[String],
+      visibility: Visibility,
+      projectId: Option[UUID],
+      projectLayerId: Option[UUID],
+      templateId: Option[UUID],
+      executionParameters: Json,
+      owner: Option[String]
+  ) extends OwnerCheck {
     def toToolRun(user: User): ToolRun = {
 
       val now = new Timestamp((new java.util.Date).getTime)
@@ -46,7 +48,6 @@ object ToolRun {
         now,
         user.id,
         now,
-        user.id,
         ownerId,
         visibility,
         projectId,
@@ -59,18 +60,19 @@ object ToolRun {
 }
 
 @JsonCodec
-final case class ToolRunWithRelated(id: UUID,
-                                    name: Option[String],
-                                    createdAt: Timestamp,
-                                    createdBy: String,
-                                    modifiedAt: Timestamp,
-                                    modifiedBy: String,
-                                    owner: String,
-                                    visibility: Visibility,
-                                    projectId: Option[UUID],
-                                    projectLayerId: Option[UUID],
-                                    templateId: Option[UUID],
-                                    executionParameters: Json,
-                                    templateTitle: String,
-                                    layerColorGroupHex: String,
-                                    layerGeometry: Option[Projected[Geometry]])
+final case class ToolRunWithRelated(
+    id: UUID,
+    name: Option[String],
+    createdAt: Timestamp,
+    createdBy: String,
+    modifiedAt: Timestamp,
+    owner: String,
+    visibility: Visibility,
+    projectId: Option[UUID],
+    projectLayerId: Option[UUID],
+    templateId: Option[UUID],
+    executionParameters: Json,
+    templateTitle: String,
+    layerColorGroupHex: String,
+    layerGeometry: Option[Projected[Geometry]]
+)
