# app-backend/datamodel/src/main/scala/UserGroupRole.scala
@@ -6,43 +6,49 @@ import java.util.UUID
 import io.circe.generic.JsonCodec
 
 @JsonCodec
-final case class UserGroupRole(id: UUID,
-                               createdAt: Timestamp,
-                               createdBy: String,
-                               modifiedAt: Timestamp,
-                               modifiedBy: String,
-                               isActive: Boolean,
-                               userId: String,
-                               groupType: GroupType,
-                               groupId: UUID,
-                               groupRole: GroupRole,
-                               membershipStatus: MembershipStatus)
+final case class UserGroupRole(
+    id: UUID,
+    createdAt: Timestamp,
+    createdBy: String,
+    modifiedAt: Timestamp,
+    isActive: Boolean,
+    userId: String,
+    groupType: GroupType,
+    groupId: UUID,
+    groupRole: GroupRole,
+    membershipStatus: MembershipStatus
+)
 
 object UserGroupRole {
   def create = Create.apply _
   def tupled = (UserGroupRole.apply _).tupled
 
-  final case class UserGroup(userId: String,
-                             groupType: GroupType,
-                             groupId: UUID)
+  final case class UserGroup(
+      userId: String,
+      groupType: GroupType,
+      groupId: UUID
+  )
 
   @JsonCodec
   final case class UserRole(userId: String, groupRole: GroupRole)
 
   @JsonCodec
-  final case class Create(userId: String,
-                          groupType: GroupType,
-                          groupId: UUID,
-                          groupRole: GroupRole) {
-    def toUserGroupRole(creator: User,
-                        membershipStatus: MembershipStatus): UserGroupRole = {
+  final case class Create(
+      userId: String,
+      groupType: GroupType,
+      groupId: UUID,
+      groupRole: GroupRole
+  ) {
+    def toUserGroupRole(
+        creator: User,
+        membershipStatus: MembershipStatus
+    ): UserGroupRole = {
       val now = new Timestamp(new java.util.Date().getTime)
       UserGroupRole(
         UUID.randomUUID(),
         now, // createdAt
         creator.id, // createdBy
         now, // modifiedAt
-        creator.id, // modifiedBy
         isActive = true,
         userId, // user that is being given the group role
         groupType,
@@ -54,16 +60,17 @@ object UserGroupRole {
   }
 
   @JsonCodec
-  final case class WithRelated(id: UUID,
-                               createdAt: Timestamp,
-                               createdBy: String,
-                               modifiedAt: Timestamp,
-                               modifiedBy: String,
-                               isActive: Boolean,
-                               userId: String,
-                               groupType: GroupType,
-                               groupId: UUID,
-                               groupRole: GroupRole,
-                               membershipStatus: MembershipStatus,
-                               groupName: String)
+  final case class WithRelated(
+      id: UUID,
+      createdAt: Timestamp,
+      createdBy: String,
+      modifiedAt: Timestamp,
+      isActive: Boolean,
+      userId: String,
+      groupType: GroupType,
+      groupId: UUID,
+      groupRole: GroupRole,
+      membershipStatus: MembershipStatus,
+      groupName: String
+  )
 }
